Prevent scrolling on iphone

--- a/vbarkovskij.com/less/sections/general.less
+++ b/vbarkovskij.com/less/sections/general.less
@@ -14,7 +14,8 @@ body {
 }
 
 .non-scrollable {
-    @media (max-width: 768px){
+    @media (max-width: 768px) {
+        position:relative;
         overflow: hidden;
     }
 }
